build executable jar that support java17 (#581)
* build executable jar that support java17

* add task to check default java version on vm

* remove --add-open option in pom file

* open package java.util for linux consumption support